[package]
name = "tm-grpc"
version = "2.2.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.5"
prost = "0.11.9"
prost-types = "0.12.0"
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1.14"
tonic = "0.9.2"
reqwest = { version = "0.11", features = ["json", "stream"] }
rstar = { version = "0.9.3", features = ["serde", "debug"] }
chrono = { version = "0.4.31", features = ["serde"] }
log = { version = "0.4.17", features = ["serde"] }
simplelog = "0.12.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
figment = { version = "0.10.11", features = ["toml"] }
clap = { version = "4.4.6", features = ["derive"] }
haversine = "0.2.1"
tempfile = "3.8.0"

[build-dependencies]
tonic-build = "0.9.2"
