[package]
name = "trackdump"
version = "2.4.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
tm-grpc = { path = "../tm-grpc" }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
serde_yaml = "0.9.25"
chrono = { version = "0.4.31", features = ["serde"] }
