[package]
name = "trackplay"
version = "2.4.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.5"
async-trait = "0.1.74"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.6", features = ["derive"] }
reqwest = { version = "0.11.22", features = ["serde_json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
serde_yaml = "0.9.25"
tm-grpc = { path = "../tm-grpc" }
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tonic = "0.9.2"
